# SciPyNotebook

./: CMakeLists.txt  INSTALL  README.rst  SciPyStudio.pro  cell.cpp  cell.h  cellinputstream.hh  cellstatus.cc  codecell.cpp  codecell.h  main.cpp  mainwindow.cpp  mainwindow.h  notebook.cpp  notebook.h  pythonengine.cc  pythonengine.hh  pythonhighlighter.cpp  pythonhighlighter.h  resultcell.cc  resultcell.hh  streamwrapper.cc
cmake/: FindPython.cmake
rsrc/: Makefile  SciPyNotebook.desktop  SciPyNotebook.dsc  SciPyNotebook.spec  debian.changelog  debian.control  debian.rules  scipynotebook.desktop  scipynotebook.dsc  scipynotebook.spec  scipynotebook.ubuntu.list
rsrc/SciPyNotebook.app/Contents/: Info.plist
rsrc/SciPyNotebook.app/Contents/Resources/: SciPyNotebook.icns
src/: CMakeLists.txt  aboutdialog.cc  aboutdialog.hh  application.cc  application.hh  cell.cc  cell.hh  cellinputstream.cc  cellinputstream.hh  cellstatus.cc  cellstatus.hh  cellview.cc  cellview.hh  codecell.cc  codecell.hh  configloader.cc  configloader.hh  logo.hh  main.cc  mainwindow.cc  mainwindow.hh  notebook.cc  notebook.hh  notebookview.cc  notebookview.hh  notebookwindow.cc  notebookwindow.hh  preamblecell.cc  preamblecell.hh  preambledialog.cc  preambledialog.hh  preferences.cc  preferences.hh  preferencesdialog.cc  preferencesdialog.hh  pythoncompleter.cc  pythoncompleter.hh  pythoncontext.cc  pythoncontext.hh  pythonengine.cc  (+7 more)
