PROJECT(SciPyNotebook)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#
# Qt4 related stuff
#
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE} ${QT_USE_QTXML})
ADD_DEFINITIONS(${QT_DEFINITIONS})
INCLUDE_DIRECTORIES(${QT_QTCORE_INCLUDE_DIR} ${QT_QTGUI_INCLUDE_DIR} ${QT_QTXML_INCLUDE_DIR})

#
# Pyhton related stuff
#
FIND_PACKAGE(PythonInterp REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

#
# Traverse into source tree...
#
ADD_SUBDIRECTORY(src)

#
# CPack related stuff
#
INSTALL(FILES rsrc/icon.png
        DESTINATION share/SciPyNotebook)
INSTALL(FILES rsrc/scipynotebook.desktop
        DESTINATION share/applications)

SET(CPACK_PACKAGE_NAME "SciPyNotebook")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "The SciPy Notebook")
SET(CPACK_PACKAGE_VENDOR "Hannes Matuschek")
SET(CPACK_PACKAGE_CONTACT "Hannes Matuschek <hmatuschek AT gmail DOT com>")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.rst")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "2")
SET(CPACK_PACKAGE_VERSION_PATCH "1")
SET(CPACK_PACKAGE_EXECUTABLES "scipynotebook" "SciPyNotebook")


#
# DEB package specific stuff
#
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Hannes Matuschek")
SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "i386")
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libqtcore4 (>= 4.5), libqtgui4 (>= 4.5), libqt4-xml (>= 4.5), python (>= 2.5)")


#
# RPM specific stuff
#
SET(CPACK_RPM_PACKAGE_LICENSE "GPLv2")
SET(CPACK_RPM_PACKAGE_REQUIRES "qt4 >= 4.5, python >= 2.5")


#
# MacOS X bundle specific stuff
#
SET(CPACK_BUNDLE_NAME "SciPyNotebook")

INCLUDE(CPack)

