PROJECT(SciPyNotebook)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#
# Register own CMake extensions:
#
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/cmake)


# Ok we need this to avoid clang compiler on MacOSX 10.8+
IF(APPLE)
SET(CMAKE_C_COMPILER "gcc")
SET(CMAKE_CXX_COMPILER "g++")
ENDIF(APPLE)


#
# Qt4 related stuff
#
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})
INCLUDE_DIRECTORIES(${QT_QTCORE_INCLUDE_DIR} ${QT_QTGUI_INCLUDE_DIR})

#
# Pyhton related stuff
#
FIND_PACKAGE(Python REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIR})

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${PYTHON_CXX_FLAGS} -Wall")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${PYTHON_CXX_FLAGS} -O0 -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${PYTHON_CXX_FLAGS} -O2")
set(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} ${PYTHON_LD_FLAGS}")
set(CMAKE_CXX_LINK_FLAGS_DEBUG "${CMAKE_CXX_LINK_FLAGS} ${PYTHON_LD_FLAGS}")

#
# Traverse into source tree...
#
ADD_SUBDIRECTORY(src)

#
# CPack related stuff
#
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_VERSION_PATCH "0rc2")
set(CPACK_SOURCE_GENERATOR "TGZ")
set(CPACK_SOURCE_PACKAGE_FILE_NAME
  "scipynotebook-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
set(CPACK_SOURCE_IGNORE_FILES
  "/build/;/doc/;/dist/;/.git/;/.svn/;~$;${CPACK_SOURCE_IGNORE_FILES}")
include(CPack)

IF(UNIX AND NOT APPLE)
INSTALL(FILES rsrc/scipynotebook.png
        DESTINATION share/icons)
INSTALL(FILES rsrc/scipynotebook.desktop
        DESTINATION share/applications)
ENDIF(UNIX AND NOT APPLE)

